Fixed using of a Numeric Keypad in the quick search mode

Properly handled Enter, arrows and other buttons from the keypad.

FIXED: [ 394939 ] Enter key not working when cursor in search bar
BUG: 394939

Differential Revision: https://phabricator.kde.org/D13443

(cherry picked from commit e5d8a1ce284ab8713605dc5ce2e66fef54355154)